@@ -1,5 +1,6 @@
 libmpdclient 2.17 (not yet released)
 * search: add mpd_search_add_db_songs_to_playlist()
+* idle: support event "partition"
 * support MPD protocol 0.22
   - "getfingerprint"
 * support tag "MPD_TAG_LABEL" and "MPD_TAG_MUSICBRAINZ_WORKID"
